--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.12",
-    "next": "14.2.5",
+    "next": "^14.2.32",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -21,5 +21,9 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "typescript": "5.4.5"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
+
