--- a/.gitignore
+++ b/.gitignore
@@ -1,66 +1,82 @@
-# --- OS / Editor ---
-.DS_Store
-Thumbs.db
-*.swp
-*.swo
-.idea/
-.vscode/
-*.code-workspace
+# ----------------------------
+# Node / Next.js (anywhere)
+# ----------------------------
+**/node_modules/
+**/.next/
+**/out/
+**/.vercel/
+**/.turbo/
 
-# --- Env & Secrets (keep example files) ---
+# Keep lockfiles (npm/yarn/pnpm) committed
+# !**/package-lock.json
+# !**/yarn.lock
+# !**/pnpm-lock.yaml
+
+# ----------------------------
+# Environment files
+# ----------------------------
 .env
-.env.*
-!.env.example
-web/.env.local
-web/.env.*
-!web/.env.example
+.env.local
+.env.*.local
+**/.env
+**/.env.local
+**/.env.*.local
 
-# --- Node / Next.js (web/) ---
-node_modules/
-.next/
-out/
-dist/
-coverage/
+# ----------------------------
+# Logs
+# ----------------------------
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# --- Go (api/) ---
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-*.test
-*.out
-*.a
-api/bin/
-bin/
-api/server
-api/coverage.*
-coverage.out
+# ----------------------------
+# OS / Editor junk
+# ----------------------------
+.DS_Store
+Thumbs.db
+*.swp
+.svn/
+.idea/
+.vscode/
+*.iml
 
-# --- Python (worker/) ---
-__pycache__/
-*.py[cod]
-*.pyo
-*.pyd
-*.so
-*.egg-info/
-*.coverage
-.eggs/
-build/
-dist/
-.venv/
-venv/
+# ----------------------------
+# Python (worker)
+# ----------------------------
+**/__pycache__/
+**/*.py[cod]
+**/.pytest_cache/
+**/.mypy_cache/
+**/.venv/
+**/venv/
 pip-wheel-metadata/
-.mypy_cache/
-.pytest_cache/
+.eggs/
+*.egg-info/
+coverage/
 coverage.xml
 htmlcov/
 
-# --- Docker / local data ---
-*.pid
+# ----------------------------
+# Go (api)
+# ----------------------------
+api/bin/
+api/tmp/
+# If you ever vendor dependencies:
+api/vendor/
+
+# ----------------------------
+# Build artifacts / temp
+# ----------------------------
+build/
+dist/
 tmp/
 data/
+*.pid
+
+# ----------------------------
+# Docker (optional)
+# ----------------------------
+docker-compose.override.yml
+*.tar
