--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
+    "@vercel/postgres": "^0.10.0",
     "framer-motion": "^12.23.12",
     "next": "^14.2.32",
     "react": "18.2.0",
@@ -26,4 +28,3 @@
     "node": ">=18"
   }
 }
-
